Fix double scrollbar w/ mouse

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -75,20 +75,21 @@ code
   background-color: #f8f8f8
   border-radius: 3px
   line-height: 1.25em
+  vertical-align: -0.30em
 
 pre
   margin: 0 0 1.5em 0.1em
   padding: 0 0.3em 0 0.3em
   background-color: #f8f8f8
-  overflow-x: auto
   word-wrap: normal
   white-space: pre
 
 pre > code
+  overflow-x: auto
   max-width: 100%
   white-space: pre
   margin: 0
-  padding: 0
+  padding: 0 0 0.1em 0
   border: 0
   background-color: transparent
 
